--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,3 +1,6 @@
+body {
+    background-image: url(../images/BG.png);
+}
 .inline-block {
     width: 100%;
     background-color: #002d5c;
@@ -16,7 +19,7 @@
     text-align: center;
     height: 80px;
     width: 825px;
-    margin-left: 500px;
+    margin-left: 550px;
     border-radius: 10px;
 }
 h1 {
@@ -31,6 +34,22 @@ h1 {
     text-align: center;
     padding: 80px;
 }
+input [type=text], select, textarea {
+    width: 25%;
+    padding: 20px;
+    border: 1px solid #002d5c;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+}
+.leftside {
+    padding: 10px;
+}
+#fname, #lname, #email, #phonen {
+    padding: 10px;
+    margin: 20px;
+}
 .submit {
     margin-top: 5px;
 }
@@ -40,5 +59,5 @@ footer {
 .align-right {
     text-align: right;
     margin-right: 20px;
-    margin-bottom: 20px;
 }
+
