--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -13,6 +13,7 @@ body {
     margin-left: 200px;
     margin-right: 55px;
     text-align: right;
+    font-family: 'Righteous', cursive;
 }
 .CTA {
     background-color: #006ba6;
@@ -28,6 +29,7 @@ h1 {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    font-family: 'Righteous', cursive;
 }
 .form {
     text-align: center;
@@ -51,6 +53,13 @@ input [type=text], select, textarea {
 }
 .submit {
     margin-top: 5px;
+    border-radius: 9px;
+    width: 310px;
+    height: 60px;
+    font-family: 'Righteous', cursive;
+    background-color: #006ba6;
+    color: white;
+    font-size: 30px;
 }
 footer {
     background-color: #006ba6;
@@ -59,4 +68,13 @@ footer {
     text-align: right;
     margin-right: 20px;
 }
-
+p2 {
+    font-family: 'Righteous', cursive;
+}
+p3 {
+    font-family: 'Righteous', cursive;
+}
+.Contact {
+    font-family: 'Righteous', cursive;
+    background-color: red;
+}
